--- a/config/database.yml
+++ b/config/database.yml
@@ -26,4 +26,8 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  # database: d1sefujl574eg
+  # host: ec2-54-227-245-222.compute-1.amazonaws.com
+  # username: khdyyxwntvbjhb
+  # password: bpjk5MpgcYK0gXQ-SAhWziEFFE
+  # port: 5432
