--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+config/secrets.yml
+
 # Ignore bundler config.
 /.bundle
-$ config/secrets.yml
+
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
